fix(minor): desk margins and misc
In few places the desk margins were not set properly. Also, fixed the border color on hover as black color popped up too much on hover.

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -82,6 +82,7 @@ $disabled-input-height: 22px;
 	--subtle-accent: var(--gray-50);
 	--subtle-fg: var(--gray-100);
 	--navbar-bg: var(--neutral);
+	--medium-border-color: var(--gray-500);
 	--fg-hover-color: var(--gray-100);
 	--card-bg: var(--fg-color);
 	--disabled-text-color: var(--gray-600);
