--- a/frappe/public/scss/desk/dark.scss
+++ b/frappe/public/scss/desk/dark.scss
@@ -27,6 +27,7 @@ $check-icon-dark: url("data:image/svg+xml, <svg viewBox='0 0 8 7' fill='none' xm
 	--fg-color: var(--gray-900);
 	--subtle-accent: var(--gray-800);
 	--subtle-fg: var(--gray-700);
+	--medium-border-color: var(--gray-600);
 	--fg-hover-color: var(--gray-800);
 	--card-bg: var(--gray-900);
 	--disabled-text-color: var(--gray-400);
