--- a/frappe/public/scss/desk/desktop.scss
+++ b/frappe/public/scss/desk/desktop.scss
@@ -541,7 +541,7 @@ body {
 			.widget-label .widget-title {
 				color: var(--invert-neutral);
 			}
-			border-color: var(--invert-neutral);
+			border-color: var(--medium-border-color);
 		}
 
 		.widget-label .widget-title {
